<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:tileMode="disabled"
    android:gravity="top">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:background="@drawable/shufflewallpaper"
        android:scaleType="centerCrop"
        android:contentDescription="@string/BG_desc" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="551dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/segmented1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            segmentedgroup:sc_checked_text_color="#ffffff"
            segmentedgroup:sc_tint_color="#000000"

            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">

            <RadioButton
                android:id="@+id/Summer"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summer"

                />

            <RadioButton
                android:id="@+id/Classic"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classic"
                />

            <RadioButton
                android:id="@+id/Future"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future"
                />

            <RadioButton
                android:id="@+id/GGs"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ggs"
                />

        </info.hoang8f.android.segmented.SegmentedGroup>


        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/segmented2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            segmentedgroup:sc_checked_text_color="#ffffff"
            segmentedgroup:sc_tint_color="#000000"

            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">

            <RadioButton
                android:id="@+id/PoisonJam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poisonjam"
                style="@style/RadioButton"
                />

            <RadioButton
                android:id="@+id/NoiseTanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noisetanks"
                style="@style/RadioButton"

                />
            <RadioButton
                android:id="@+id/LoveShockers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loveshockers"
                style="@style/RadioButton"
                />

        </info.hoang8f.android.segmented.SegmentedGroup>


        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/segmented3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            segmentedgroup:sc_checked_text_color="#ffffff"
            segmentedgroup:sc_tint_color="#000000"

            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp"
            >

            <RadioButton
                android:id="@+id/Rapid99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rapid99"
                style="@style/RadioButton"/>
            <RadioButton
                android:id="@+id/Immortals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immortals"
                style="@style/RadioButton"/>

            <RadioButton
                android:id="@+id/DoomRiders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doomriders"
                style="@style/RadioButton"/>

            <RadioButton
                android:id="@+id/GoldenRhinos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goldenrhinos"
                style="@style/RadioButton"/>
        </info.hoang8f.android.segmented.SegmentedGroup>


        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/segmented4"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            segmentedgroup:sc_checked_text_color="#ffffff"
            segmentedgroup:sc_tint_color="#000000"

            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">


            <RadioButton
                android:id="@+id/Shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuffle"
                style="@style/RadioButton"/>
        </info.hoang8f.android.segmented.SegmentedGroup>


    </LinearLayout>

    <ImageView
        android:id="@+id/StationLogo"
        android:contentDescription="@string/Image_desc"
        android:layout_width="235dp"
        android:layout_height="201dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:src="@drawable/shuffle"
        android:visibility="visible"
        app:srcCompat="@drawable/shuffle" />

    <TextView
        android:id="@+id/songartist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-52dp"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/songtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:gravity="center"
        android:textSize="24sp" />


</RelativeLayout>